# cuda-matmul

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  bench.cu
src/: cuda_utils.cuh  utils.cuh
src/ampere/: optimized.cuh
